[Refac]: 중복된 유효성 검사 분리