@@ -2,6 +2,7 @@ package org.sopt.makers.internal.project.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.val;
+import org.sopt.makers.internal.exception.WrongImageInputException;
 import org.sopt.makers.internal.member.domain.MemberSoptActivity;
 import org.sopt.makers.internal.project.domain.ProjectLink;
 import org.sopt.makers.internal.project.domain.MemberProjectRelation;
@@ -42,6 +43,7 @@ public class ProjectService {
 
     @Transactional
     public void createProject (ProjectSaveRequest request) {
+        validateImageCount(request.images().length);
         val project = projectRepository.save(
                 Project.builder()
                         .name(request.name())
@@ -79,17 +81,18 @@ public class ProjectService {
     }
 
     @Transactional
-    public void updateProject (Long writerId, Long id, ProjectUpdateRequest request) {
-        val project = projectRepository.findById(id)
-                .orElseThrow(() -> new NotFoundDBEntityException("잘못된 프로젝트 조회입니다."));
-        if (!Objects.equals(project.getWriterId(), writerId)) throw new ClientBadRequestException("수정 권한이 없는 유저입니다.");
+    public void updateProject (Long writerId, Long projectId, ProjectUpdateRequest request) {
+        validateImageCount(request.images().length);
+        Project project = getProjectById(projectId);
+        validateWriter(project, writerId);
+
         project.updateAll(
                 request.name(), request.generation(), request.category(), request.startAt(),
                 request.endAt(), request.serviceType(), request.isAvailable(), request.isFounding(), request.summary(), request.detail(),
                 request.logoImage(), request.thumbnailImage(), request.images()
         );
 
-        val relationList = relationRepository.findAllByProjectId(id);
+        val relationList = relationRepository.findAllByProjectId(projectId);
         val relations = relationList.stream()
                 .collect(Collectors.toMap(MemberProjectRelation::getUserId, Function.identity()));
         val relationUserSet = Set.copyOf(relationList.stream().map(MemberProjectRelation::getUserId).collect(Collectors.toList()));
@@ -122,28 +125,23 @@ public class ProjectService {
             }
         }).collect(Collectors.toList()));
 
-        projectLinkRepository.deleteAllByProjectId(id);
+        projectLinkRepository.deleteAllByProjectId(projectId);
         projectLinkRepository.saveAll(request.links().stream().map(linkRequest -> ProjectLink.builder()
                 .projectId(project.getId())
                 .title(linkRequest.linkTitle())
                 .url(linkRequest.linkUrl())
-                .build()).collect(Collectors.toList()));
+                .build()).toList());
 
     }
 
     @Transactional
-    public void deleteProject (Long writerId, Long id) {
-        val project = projectRepository.findById(id)
-                .orElseThrow(() -> new NotFoundDBEntityException("잘못된 프로젝트 조회입니다."));
-        if (!Objects.equals(project.getWriterId(), writerId)) throw new ClientBadRequestException("수정 권한이 없는 유저입니다.");
-        projectLinkRepository.deleteAllByProjectId(id);
-        relationRepository.deleteAllByProjectId(id);
-        projectRepository.delete(project);
-    }
+    public void deleteProject (Long writerId, Long projectId) {
+        Project project = getProjectById(projectId);
+        validateWriter(project, writerId);
 
-    @Transactional(readOnly = true)
-    public List<Project> getProjectByName (String name) {
-        return projectRepository.findAllByNameContaining(name);
+        projectLinkRepository.deleteAllByProjectId(projectId);
+        relationRepository.deleteAllByProjectId(projectId);
+        projectRepository.delete(project);
     }
 
     @Transactional(readOnly = true)
@@ -172,8 +170,7 @@ public class ProjectService {
 
     @Transactional(readOnly = true)
     public List<ProjectLinkDao> fetchLinksById (Long id) {
-        val project = projectQueryRepository.findLinksById(id);
-        return project;
+        return projectQueryRepository.findLinksById(id);
     }
 
     @Transactional(readOnly = true)
@@ -197,8 +194,20 @@ public class ProjectService {
         return projectQueryRepository.countProjectsExcludeSopkathon(memberId);
     }
 
-    @Transactional(readOnly = true)
-    public Long getAllCount() {
-        return projectRepository.count();
+    private Project getProjectById(Long projectId) {
+        return projectRepository.findById(projectId)
+                .orElseThrow(() -> new NotFoundDBEntityException("잘못된 프로젝트 조회입니다."));
+    }
+
+    private void validateImageCount(int imageCount) {
+        if (imageCount > 10) {
+            throw new WrongImageInputException("이미지 개수를 초과했습니다.", "OutOfNumberImages");
+        }
+    }
+
+    private void validateWriter(Project project, Long writerId) {
+        if (!Objects.equals(project.getWriterId(), writerId)) {
+            throw new ClientBadRequestException("수정 권한이 없는 유저입니다.");
+        }
     }
 }
